re PR target/47551 (ICE when reloading neon registers from out-of-range offsets)

gcc/
	PR target/47551
	* config/arm/arm.c (coproc_secondary_reload_class): Handle
	structure modes.  Don't check neon_vector_mem_operand for
	vector or structure modes.

gcc/testsuite/
	PR target/47551
	* gcc.target/arm/neon-modes-2.c: New test.

From-SVN: r171730